[package]
name = "Harmonia"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A track generator plugin"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../.." }
nih_plug_vizia = { path = "../../nih_plug_vizia" }
